# example-python-grpc

./: .gitignore  README.md  pyproject.toml
example/: client.py  generate.py  server.py
protos/: example.proto
